discussion/kv_engine/181803/181803_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for per-bucket audit filter

This patch does not add support for per scope/collection
filter

Change-Id: Ie9124f3edb9968512ee7f8799196812556a7af71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-26 11:15:54.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-26 12:27:50.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21479/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:46:16: error: no member named "is_audit_event_filtered_out" in "FrontEndThread" [clang-diagnostic-error]
    if (thread.is_audit_event_filtered_out(
               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21479/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21479/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50703/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mcaudit.cc(46): error C2039: "is_audit_event_filtered_out": is not a member of "FrontEndThread" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50703/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42547/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42547/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/210/ : FAILURE

Compile error at [2022-10-26T12:03:27.561Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/mcaudit.cc:46:16:
error: ?struct FrontEndThread? has no member named ?is_audit_event_filtered_out?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/210/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11208/ : FAILURE

Compile error at [2022-10-26T12:05:11.735Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11208/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23511/ : FAILURE

Compile error at [2022-10-26T12:20:19.446Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/mcaudit.cc:46:16:
error: ?struct FrontEndThread? has no member named ?is_audit_event_filtered_out?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23511/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23919/ : FAILURE

Compile error at [2022-10-26T12:12:13.449Z] ../kv_engine/daemon/mcaudit.cc:46:16:
error: ?struct FrontEndThread? has no member named ?is_audit_event_filtered_out?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23919/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24751/ : FAILURE

Compile error at [2022-10-26T12:12:21.676Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24751/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11299/ : FAILURE

Compile error at [2022-10-26T11:58:24.321Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mcaudit.cc:46:16:
error: ?struct FrontEndThread? has no member named ?is_audit_event_filtered_out?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11299/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31935/ : FAILURE

Compile error at [2022-10-26T12:27:10.972Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31935/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22937/ : FAILURE

Compile error at [2022-10-26T12:08:42.202Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/daemon/mcaudit.cc:46:16:
error: no member named "is_audit_event_filtered_out" in "FrontEndThread"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22937/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20747/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
